# bigquery-emulator

./: .gitignore  Dockerfile  Makefile  README.md  go.mod  go.sum
.github/workflows/: build.yml  release.yml  test.yml
cmd/bigquery-emulator/: main.go
internal/: prepared_statements.go
internal/connection/: manager.go
internal/contentdata/: repository.go
internal/metadata/: project.go  repository.go
internal/types/: types.go
server/: bytes_field_test.go  context.go  copy_job_test.go  csv_autodetect_test.go  flexible_rpc_marshalling.go  handler.go  handler_test.go  loader.go  middleware.go  server.go  server_test.go  storage_handler.go  storage_test.go  struct_field_test.go
server/testdata/: data.yaml
test/node/: .gitignore  README.md  package.json  tsconfig.json  vitest.config.ts
test/node/src/: basicEmulator.test.ts  emptyArrayRepeated.test.ts  parameterizedQueries.test.ts
test/node/src/utils/: BigQueryEmulatorContainer.ts  testSetup.ts
test/python/: README.md  conftest.py  csv_autodetect_test.py  emulator_test.py  extreme_values_test.py  pyproject.toml
test/python/utils/: big_query_emulator_container.py  big_query_emulator_control.py  big_query_emulator_test_case.py
types/: arrow.go  arrow_test.go  avro.go  types.go  types_test.go  validation.go
